[package]
name = "scorpionest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lasso = { version = "0.7.2", features = ["multi-threaded"] }
anyhow = "1.0.88"
ariadne = "0.4.0"
chumsky = "1.0.0-alpha.7"
logos = "0.14.0"
once_cell = "1.20.0"
pretty = { version = "0.12.1", features = ["termcolor"] }
thiserror = "1.0.63"
rust_decimal = "1.36.0"

[toolchain]
channel = "nightly"
